# automake-tutorial

./: .gitignore  README.md
01/: Makefile  Makefile.am  Makefile.in  README  Tutorial  config.h  config.h.in  config.status  configure  configure.ac  configure.scan
01/.deps/: tutorial.Po
01/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
ams_report/: pom.xml
cardinal/: Program.cs  Startup.cs
com-byteslounge-websockets/: README.md  pom.xml
common/: .cproject
dbimport/: .gitignore  README.md  build.gradle  settings.gradle
device-manager/: Dockerfile  README.md  config.js  index.js  package.json
download_email/: DeleteEmail.java  DownLoadEmail.java  GroupEmail.java  README  TZ.java  bind_error.txt  delete_email.sh  download_email.sh  group_email.sh
ecpg/: .cproject  .project
ecpg_compat/: .cproject  .project
haproxy/: .cproject  .project  README
hps-report/: pom.xml
maketutor/: 1.mk  2.mk  3.mk  4.mk  README  clean.mk
mastercvv/: build.gradle
myApp/: .gitignore  .yo-rc.json  LEARNING  README.md  bower.json  gulpfile.js  package.json  pom.xml
nginx/: .cproject  README
pgfeutils/: .cproject  .project
pgtypes/: .cproject  .project
pi/: a.sh  default  g1  h  i  j  smb.conf
port/: .cproject  .project
postgres/: .cproject  README
pq/: .cproject  .project
py/: README.md  ams.htm  gitlab_login.py  setQAKey.py
react-app/: README.md  package-lock.json  package.json
reactjs/: thinking-in-react.jsx
report_boot_security/: README.md  pom.xml
temp/: mysqlReadMe.txt  pgsqlReadMe.txt
(+444 files in other folders)
